--- a/Police/en.lproj/RTFirstViewController.xib
+++ b/Police/en.lproj/RTFirstViewController.xib
@@ -40,7 +40,7 @@
 					<object class="IBUIImageView" id="5967296">
 						<reference key="NSNextResponder" ref="1014301403"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 50}, {320, 50}}</string>
+						<string key="NSFrameSize">{320, 50}</string>
 						<reference key="NSSuperview" ref="1014301403"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1070074535"/>
@@ -54,7 +54,7 @@
 					<object class="IBUIButton" id="1070074535">
 						<reference key="NSNextResponder" ref="1014301403"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 57}, {43, 43}}</string>
+						<string key="NSFrame">{{20, 7}, {43, 43}}</string>
 						<reference key="NSSuperview" ref="1014301403"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1064757114"/>
@@ -75,10 +75,11 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
-						<object class="NSCustomResource" key="IBUISelectedImage">
+						<object class="NSCustomResource" key="IBUIHighlightedImage" id="279014647">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">alarm_button_pressed@2x.png</string>
 						</object>
+						<reference key="IBUISelectedImage" ref="279014647"/>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">alarm_button@2x.png</string>
@@ -96,7 +97,7 @@
 					<object class="IBUIButton" id="279038831">
 						<reference key="NSNextResponder" ref="1014301403"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{259, 57}, {41, 42}}</string>
+						<string key="NSFrame">{{259, 8}, {41, 42}}</string>
 						<reference key="NSSuperview" ref="1014301403"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -126,7 +127,7 @@
 					<object class="IBUIButton" id="1064757114">
 						<reference key="NSNextResponder" ref="1014301403"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{101, 2}, {119, 98}}</string>
+						<string key="NSFrame">{{126, -13}, {69, 63}}</string>
 						<reference key="NSSuperview" ref="1014301403"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="552429866"/>
@@ -151,7 +152,7 @@
 					<object class="IBUIImageView" id="552429866">
 						<reference key="NSNextResponder" ref="1014301403"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{101, 12}, {119, 98}}</string>
+						<string key="NSFrame">{{126, -10}, {69, 63}}</string>
 						<reference key="NSSuperview" ref="1014301403"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="279038831"/>
@@ -164,7 +165,7 @@
 						</object>
 					</object>
 				</array>
-				<string key="NSFrameSize">{320, 100}</string>
+				<string key="NSFrameSize">{320, 50}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="5967296"/>
@@ -173,6 +174,8 @@
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MCAwAA</bytes>
 				</object>
+				<bool key="IBUIOpaque">NO</bool>
+				<bool key="IBUIAutoresizesSubviews">NO</bool>
 				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
 					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
 					<string key="IBUIDisplayName">Freeform</string>
@@ -261,14 +264,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">ladarIndicator</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="552429866"/>
-					</object>
-					<int key="connectionID">27</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">bottomView</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="1014301403"/>
@@ -282,6 +277,22 @@
 						<reference key="destination" ref="1064757114"/>
 					</object>
 					<int key="connectionID">31</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">messageBtn</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="1070074535"/>
+					</object>
+					<int key="connectionID">35</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">ladarIndicator</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="552429866"/>
+					</object>
+					<int key="connectionID">27</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -300,6 +311,15 @@
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">32</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">showMessageList:</string>
+						<reference key="source" ref="1070074535"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">34</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -339,10 +359,10 @@
 						<reference key="object" ref="1014301403"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="5967296"/>
-							<reference ref="1070074535"/>
-							<reference ref="279038831"/>
 							<reference ref="1064757114"/>
 							<reference ref="552429866"/>
+							<reference ref="1070074535"/>
+							<reference ref="279038831"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -385,7 +405,7 @@
 				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="0.0" key="24.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="1" key="25.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
+				<real value="0.0" key="25.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="26.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -393,7 +413,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">32</int>
+			<int key="maxID">35</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -402,11 +422,16 @@
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="sendMessage:">id</string>
+						<string key="showMessageList:">id</string>
 						<string key="toggleLadar:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
 						<object class="IBActionInfo" key="sendMessage:">
 							<string key="name">sendMessage:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="showMessageList:">
+							<string key="name">showMessageList:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="toggleLadar:">
@@ -418,6 +443,7 @@
 						<string key="bottomView">UIView</string>
 						<string key="ladarBtn">UIButton</string>
 						<string key="ladarIndicator">UIImageView</string>
+						<string key="messageBtn">UIButton</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<object class="IBToOneOutletInfo" key="bottomView">
@@ -432,6 +458,10 @@
 							<string key="name">ladarIndicator</string>
 							<string key="candidateClassName">UIImageView</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="messageBtn">
+							<string key="name">messageBtn</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
@@ -445,10 +475,10 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="alarm_button@2x.png">{86, 86}</string>
+			<string key="alarm_button@2x.png">{81, 83}</string>
 			<string key="alarm_button_pressed@2x.png">{86, 86}</string>
-			<string key="middle_ radar_on@2x.png">{238, 196}</string>
-			<string key="middle_button_on@2x.png">{238, 195}</string>
+			<string key="middle_ radar_on@2x.png">{138, 126}</string>
+			<string key="middle_button_on@2x.png">{138, 126}</string>
 			<string key="msg_button@2x.png">{82, 84}</string>
 			<string key="msg_button_pressed@2x.png">{82, 84}</string>
 			<string key="toolbar_bg@2x.png">{640, 99}</string>
